# hugginface-agent-course-study

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
docs/: 01_introduction_to_agents.md  02_frameworks_for_agents.md
